[package]
name = "rslush"
version = "0.1.0"
authors = ["kpbochenek <kpbochenek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.34.3", features = ["ttf", "gfx"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
